@@ -8,6 +8,7 @@ XIV(bool, showPopupsAbovePointer,               false)
 XIV(bool, multiByte,                            true)
 #endif
 XIV(bool, modSuperIsCtrlAlt,                    true)
+XIV(bool, doubleBuffer,                         true)
 XIV(int, xineramaPrimaryScreen,                 0)
 XIV(int, MenuActivateDelay,                     40)
 XIV(int, SubmenuActivateDelay,                  300)
