@@ -5,6 +5,7 @@
 	- fix memory leak in icewmbg on workspace switches
 	- fix menu behavior with xinerama
 	- Italian translation updated
+	- new preference "DoubleBuffer" (default: 1)
 
 1.2.12: 2003-08-24
         - MAJOR CHANGE: reverted preferences/theme order to same 
